<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:fitsSystemWindows="true">

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/main_layout_sort"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/sortGray"
                android:gravity="end|center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/main_btn_sort_type"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/sort_button_height"
                    android:layout_marginEnd="@dimen/sort_base_margin"
                    android:layout_marginRight="@dimen/sort_base_margin"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/test"
                    android:textSize="@dimen/sort_text_default" />

                <ImageButton
                    android:id="@+id/main_btn_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/sort_base_margin"
                    android:layout_marginRight="@dimen/sort_base_margin"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/baseline_up_black_24" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/main_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/main_txt_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/main_empty"
                    android:textColor="@color/black"
                    android:textSize="@dimen/main_empty_text_size" />
            </RelativeLayout>

        </LinearLayout>

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/main_memo_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="0dp"
            app:fab_addButtonColorNormal="@color/defaultColorAccent"
            app:fab_addButtonColorPressed="@color/defaultColorAccentPressed"
            app:fab_addButtonSize="normal"
            app:fab_labelStyle="@style/AppTheme.MemoMenuLabel"
            app:fab_labelsPosition="left">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/main_memo_menu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:fab_colorNormal="@color/defaultColorAccent"
                app:fab_colorPressed="@color/defaultColorAccentPressed"
                app:fab_icon="@drawable/memo_text_white_24"
                app:fab_title="@string/fab_text" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/main_memo_menu_paint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:fab_colorNormal="@color/defaultColorAccent"
                app:fab_colorPressed="@color/defaultColorAccentPressed"
                app:fab_icon="@drawable/memo_paint_white_24"
                app:fab_title="@string/fab_paint" />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </RelativeLayout>

</LinearLayout>